Testing other colors

--- a/bassdock/index.html
+++ b/bassdock/index.html
@@ -20,7 +20,7 @@
   <div class="max-width-3 px2">
     <h2 class="h0 caps m0 pb2 bb4">HST</h2>
   </div>
-  <div class="flex flex-wrap">
+  <div class="flex flex-wrap items-baseline">
     <div class="max-width-3 px2">
       <p class="h3">
         The Hubble Space Telescope (HST) is a space telescope that was launched into low Earth orbit in 1990, and remains in operation. With a 2.4-meter (7.9 ft) mirror, Hubble's four main instruments observe in the near ultraviolet, visible, and near infrared spectra. The telescope is named after the astronomer Edwin Hubble.
@@ -54,7 +54,7 @@
 
 <section id="" class="flex items-center justify-center p4 v80 frost bg-blue vignette">
   <div>
-    <span class="h3 bold caps">Launch Date</span>
+    <span class="h3 bold caps dark-blue">Launch Date</span>
     <h2 class="h0 caps m0">April 24, 1990</h2>
   </div>
 </section>
@@ -106,17 +106,19 @@
   </div>
 </section>
 
-<section class="p3">
-  <h2 class="caps">Download</h2>
-  <pre class="mb3 pl2 blue bl4">npm i bassdock</pre>
-  <a href="//github.com/basscss/themes/bassdock"
-    class="btn caps mr2">
-    GitHub
-  </a>
-  <a href="//npmjs.com/package/bassdock"
-    class="btn caps">
-    npm
-  </a>
+<section class="flex items-center p3 v60 white bg-blue vignette">
+  <div>
+    <h2 class="h0 caps">Download</h2>
+    <pre class="mb3 pl2 dark-blue bl4">npm i bassdock</pre>
+    <a href="//github.com/basscss/themes/bassdock"
+      class="btn caps mr2 bg-dark-blue">
+      GitHub
+    </a>
+    <a href="//npmjs.com/package/bassdock"
+      class="btn caps bg-dark-blue">
+      npm
+    </a>
+  </div>
 </section>
 
 <footer class="flex flex-wrap p3 my4">
