--- a/bassdock/index.html
+++ b/bassdock/index.html
@@ -55,7 +55,7 @@
 <section id="" class="flex items-center justify-center p4 v80 frost bg-blue vignette">
   <div>
     <span class="h3 bold caps dark-blue">Launch Date</span>
-    <h2 class="h0 caps m0">April 24, 1990</h2>
+    <h2 class="h0 caps m0">4/24/90</h2>
   </div>
 </section>
 
