--- a/monobass/index.html
+++ b/monobass/index.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 <title>monobass</title>
 
+<link href="https://npmcdn.com/basscss-addons@1.0.0-beta1/modules/forms/index.css" rel="stylesheet">
 <link href="https://npmcdn.com/basscss@8.0.0-beta5/css/basscss.min.css" rel="stylesheet">
 <link href="monobass.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto:400,700" rel="stylesheet">
@@ -10,6 +11,10 @@
   <h1 class="mb0">monobass</h1>
   <p class="mt0">Hyperminimal theme for Basscss</p>
 </header>
+
+<div class="max-width-4 mx-auto px3 py2 mx-auto" style="font-size: 6rem;">
+  ⬢
+</div>
 
 <section class="max-width-4 mx-auto px3 py4">
   <h2 class="h6 caps">Type Scale</h2>
@@ -52,23 +57,14 @@
   <a href="" class="btn bg-red">btn</a>
 </section>
 
-<div class="sq2 p1 mx-auto center white bg-black">
-  ⬢
-</div>
+<section class="max-width-4 mx-auto px3 py4">
+  <h2 class="h6 caps">Form</h2>
+  <label class="label">Email Address</label>
+  <input type="text" class="input" />
+</section>
 
-<div class="h1 max-width-4 mx-auto px3 py2">
-  ✖
-  ◑
-  ▶
-  ◮
-  ⧩
-  ⬖ ⬗ ⬘ ⬙
-  ⬢ ⬣
-  ◩ ◪
-  ❮ ❯ ❬ ❭ ❰ ❱
-</div>
 
 <footer class="flex items-baseline max-width-4 mx-auto px3 py4">
-  <a href="" class="btn caps mr-auto">GitHub</a>
-  <a href="//jxnblk.com" class="h6 bold caps">Made by Jxnblk</a>
+  <a href="" class="btn caps mr-auto bg-black">GitHub</a>
+  <a href="//jxnblk.com" class="h6 bold caps black">Made by Jxnblk</a>
 </footer>
