Add viewport meta tag

--- a/monobass/index.html
+++ b/monobass/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>monobass</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="monobass.css" rel="stylesheet">
 <link href="https://npmcdn.com/basscss@8.0.0-beta5/css/basscss.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Roboto:400,700" rel="stylesheet">
+
 <style>
 .sq1 { width: 3rem; height: 3rem; }
 .sq2 { width: 6rem; height: 6rem; }
