Clean up styles

--- a/bassdock/index.html
+++ b/bassdock/index.html
@@ -8,17 +8,17 @@
 
 <header class="p3 v80 flex flex-column justify-end frost bg-black bg-cover bg-center vignette"
   style="background-image: url(https://d262ilb51hltx0.cloudfront.net/max/2000/1*DZwdGMaeu-rvTroJYui6Uw.jpeg)">
-  <div class="max-width-3 bt4 py2 mb4">
+  <div class="max-width-3 bt py2 mb4">
     <h1 class="h0 m0 caps">Bassdock</h1>
     <p class="caps bold mt0 mb3">Theme for Basscss</p>
-    <a href="//github.com/basscss/themes/bassdock" class="btn caps mr2 black bg-frost">GitHub</a>
+    <a href="//github.com/basscss/themes/tree/gh-pages/bassdock" class="btn caps mr2 black bg-frost">GitHub</a>
   <a href="//npmjs.com/package/bassdock" class="btn caps black bg-frost">npm</a>
   </div>
 </header>
 
 <section class="px2 py4">
   <div class="max-width-3 px2">
-    <h2 class="h0 caps m0 pb2 bb4">HST</h2>
+    <h2 class="h0 caps m0 pb2 bb">HST</h2>
   </div>
   <div class="flex flex-wrap items-baseline">
     <div class="max-width-3 px2">
@@ -28,7 +28,7 @@
       <p class="">
         Hubble's orbit outside the distortion of Earth's atmosphere allows it to take extremely high-resolution images with negligible background light. Hubble has recorded some of the most detailed visible-light images ever, allowing a deep view into space and time. Many Hubble observations have led to breakthroughs in astrophysics, such as accurately determining the rate of expansion of the universe.
       </p>
-      <blockquote class="h3 bold bl4 ml0 pl2 blue">
+      <blockquote class="h3 bold bl ml0 pl2 blue">
         Many Hubble observations have led to breakthroughs in astrophysics, such as accurately determining the rate of expansion of the universe.
       </blockquote>
       <p>
@@ -52,7 +52,7 @@
     </div>
 </section>
 
-<section id="" class="flex items-center justify-center p4 v80 frost bg-blue vignette">
+<section id="" class="flex items-center justify-center p4 v80 frost bg-blue">
   <div>
     <span class="h3 bold caps dark-blue">Launch Date</span>
     <h2 class="h0 caps m0">4/24/90</h2>
@@ -62,42 +62,42 @@
 <section id="stats" class="xmax-width-4 px3 py4 blue">
   <div class="flex flex-wrap py3 blue">
     <div class="col-12 sm-col-6 mb3">
-      <div class="bold bl4 pl2">
+      <div class="bold bl pl2">
         <b class="h0">11,110 kg</b>
         <br />
         <span>Launch Mass</span>
       </div>
     </div>
     <div class="col-12 sm-col-6 mb3">
-      <div class="bold bl4 pl2">
+      <div class="bold bl pl2">
         <b class="h0">13.2 m × 4.2 m</b>
         <br />
         <span>Dimensions</span>
       </div>
     </div>
     <div class="col-12 sm-col-6 mb3">
-      <div class="bold bl4 pl2">
+      <div class="bold bl pl2">
         <b class="h1">2800 watts</b>
         <br />
         <span>Power</span>
       </div>
     </div>
     <div class="col-12 sm-col-6 mb3">
-      <div class="bold bl4 pl2">
+      <div class="bold bl pl2">
         <b class="h1">2.4 m</b>
         <br />
         <span>Diameter</span>
       </div>
     </div>
     <div class="col-12 sm-col-6 mb3">
-      <div class="bold bl4 pl2">
+      <div class="bold bl pl2">
         <b class="h1">57.6 m</b>
         <br />
         <span>Focal Length</span>
       </div>
     </div>
     <div class="col-12 sm-col-6 mb3">
-      <div class="bold bl4 pl2">
+      <div class="bold bl pl2">
         <b class="h1">4.5 m<sup>2</sup></b>
         <br />
         <span>Collecting Area</span>
@@ -106,11 +106,11 @@
   </div>
 </section>
 
-<section class="flex items-center p3 v60 white bg-blue vignette">
+<section class="flex items-center p3 v60 white bg-blue">
   <div>
     <h2 class="h0 caps">Download</h2>
-    <pre class="mb3 pl2 dark-blue bl4">npm i bassdock</pre>
-    <a href="//github.com/basscss/themes/bassdock"
+    <pre class="mb3 pl2 dark-blue bl">npm i bassdock</pre>
+    <a href="//github.com/basscss/themes/tree/gh-pages/bassdock"
       class="btn caps mr2 bg-dark-blue">
       GitHub
     </a>
